--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,16 @@ dependencies:
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   equatable: ^2.0.5
+  floor: ^1.4.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  uuid: ^4.3.3
   very_good_analysis: ^5.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.8
+  floor_generator: ^1.4.2
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
