--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 
 dependencies:
+  animations: ^2.0.11
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   equatable: ^2.0.5
@@ -18,6 +19,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_screenutil: ^5.9.0
   get_it: ^7.6.7
+  lottie: ^3.1.0
   sqflite: ^2.3.2
   uuid: ^4.3.3
   very_good_analysis: ^5.1.0
@@ -32,8 +34,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/json/
   #   - images/a_dot_ham.jpeg
 
   # example:
