--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 dependencies:
   animations: ^2.0.11
   cupertino_icons: ^1.0.6
+  custom_date_range_picker: ^1.0.10
   dartz: ^0.10.1
+  dropdown_button2: ^2.3.9
   equatable: ^2.0.5
   floor: ^1.4.2
   flutter:
@@ -19,6 +21,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_screenutil: ^5.9.0
   get_it: ^7.6.7
+  intl: ^0.18.1
   lottie: ^3.1.0
   sqflite: ^2.3.2
   uuid: ^4.3.3
