--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_screenutil: ^5.9.0
+  flutter_swipe_action_cell: ^3.1.3
   get_it: ^7.6.7
   intl: ^0.18.1
   lottie: ^3.1.0
