--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_local_notifications: ^8.2.0
   flutter_screenutil: ^5.9.0
   flutter_staggered_animations: ^1.1.1
   flutter_swipe_action_cell: ^3.1.3
