--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,10 @@ allprojects {
         google()
         mavenCentral()
     }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.1'
+    }
 }
 
 rootProject.buildDir = '../build'
