--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
-  flutter_local_notifications: ^8.2.0
+  flutter_local_notifications: ^17.0.0
   flutter_screenutil: ^5.9.0
   flutter_staggered_animations: ^1.1.1
   flutter_swipe_action_cell: ^3.1.3
   get_it: ^7.6.7
   intl: ^0.18.1
   lottie: ^3.1.0
+  rxdart: ^0.27.7
   shared_preferences: ^2.2.2
   sqflite: ^2.3.2
   uuid: ^4.3.3
