--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 
 dependencies:
+  android_alarm_manager_plus: ^3.0.4
   animations: ^2.0.11
   cupertino_icons: ^1.0.6
   custom_date_range_picker: ^1.0.10
