--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_swipe_action_cell: ^3.1.3
   get_it: ^7.6.7
   intl: ^0.18.1
+  json_annotation: ^4.8.1
   lottie: ^3.1.0
   rxdart: ^0.27.7
   shared_preferences: ^2.2.2
@@ -39,6 +40,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
